# pyloo

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  codecov.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  review_plan.md  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_improvement.yml  feature_request.yml
.github/workflows/: ci.yml  mypy.yml  test.yml  zizmor.yml
data/: lake_huron.csv
docs/: conf.py  index.md
docs/_static/: custom.css
examples/: README.md  eight_schools.py  requirements.txt  student_scores.py
examples/loo/: eight_schools.py  logistic_regression.py  student_scores.py
pyloo/: E_loo.py  __init__.py  base.py  compare.py  constants.py  diagnostics.py  e_loo.py  effective_sample_sizes.py  elpd.py  ess.py  expected_loo.py  helpers.py  importance_sampling.py  log_density.py  loo.py  loo_approximate_posterior.py  loo_future.py  loo_group.py  loo_i.py  loo_kfold.py  loo_moment_match.py  loo_nonfactor.py  loo_predictive_metric.py  loo_score.py  loo_subsample.py  moment_matching_utils.py  psis.py  rcparams.py  reloo.py  sis.py  split_moment_match.py  split_moment_matching.py  tis.py  utils.py  utils_moment_matching.py  waic.py
pyloo/approximations/: __init__.py  base.py  importance_sampling.py  lpd.py  plpd.py
pyloo/estimators/: __init__.py  base.py  difference.py  hansen_hurwitz.py  srs.py
pyloo/plots/: __init__.py  influence_plot.py  loo_difference_plot.py  loo_plot.py  plot_utils.py
pyloo/plots/backends/: __init__.py
pyloo/plots/backends/matplotlib/: __init__.py  influence_plot.py  loo_difference_plot.py  loo_plot.py
pyloo/tests/: __init__.py  conftest.py  helpers.py  models.py  test_basic.py  test_data.py  test_psis.py
pyloo/tests/base_tests/: test_E_loo.py  test_approximations_base.py  test_approximations_importance_sampling.py  test_approximations_lpd.py  test_approximations_plpd.py  test_base.py  test_compare.py  test_diagnostics.py  test_e_loo.py  test_effective_sample_sizes.py  test_elpd.py  test_ess.py  test_estimators_base.py  test_estimators_difference.py  test_estimators_hansen_hurwitz.py  test_estimators_srs.py  test_expected_loo.py  test_importance_sampling.py  test_loo.py  test_loo_approximate_posterior.py  test_loo_future.py  test_loo_group.py  test_loo_i.py  test_loo_kfold.py  test_loo_moment_match.py  test_loo_nonfactor.py  test_loo_predictive_metric.py  test_loo_score.py  test_loo_subsample.py  test_plots_matplotlib.py  test_psis.py  test_pymc_wrapper.py  test_rcparams.py  test_reloo.py  test_sis.py  test_tis.py  test_utils.py  test_waic.py  test_wrapper.py
pyloo/tests/wrapper_tests/: test_laplace.py  test_laplace_wrapper.py  test_pymc_wrapper.py
pyloo/wrapper/: __init__.py  laplace.py  laplace_wrapper.py  log_density.py  model_wrapper.py  pymc.py  pymc_wrapper.py  test_wrapper.py  utils.py
pyloo/wrapper/pymc/: laplace.py  pymc.py  utils.py
scripts/: Dockerfile  README.md  container.ps1  container.sh  create_testenv.sh  install_miniconda.sh  lint.sh
src/pyloo/: __init__.py
src/pyloo/tests/: __init__.py  test_basic.py
